SERVER-12554 There's no need to iterate all over the runner if limit is set, because this is really expensive (the scan it done under lock scope).