src/mongo/db/ops/count.cpp
@@ -84,6 +84,13 @@ namespace mongo {
         }
 
         Runner* rawRunner;
+        long long skip = cmd["skip"].numberLong();
+        long long limit = cmd["limit"].numberLong();
+
+        if (limit < 0) {
+            limit = -limit;
+        }
+
         uassertStatusOK(getRunnerCount(collection, query, hintObj, &rawRunner));
         auto_ptr<Runner> runner(rawRunner);
 
@@ -94,12 +101,22 @@ namespace mongo {
             long long count = 0;
             Runner::RunnerState state;
             while (Runner::RUNNER_ADVANCED == (state = runner->getNext(NULL, NULL))) {
-                ++count;
+                if (skip > 0) {
+                    --skip;
+                }
+                else {
+                    ++count;
+                    // Fast-path. There's no point in iterating all over the runner if limit
+                    // is set.
+                    if (count >= limit && limit != 0) {
+                        break;
+                    }
+                }
             }
 
             // Emulate old behavior and return the count even if the runner was killed.  This
             // happens when the underlying collection is dropped.
-            return applySkipLimit(count, cmd);
+            return count;
         }
         catch (const DBException &e) {
             err = e.toString();
